cli/tests/testdata/bench/no_check.out

bench result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out ([WILDCARD])

error: Uncaught TypeError: Cannot read properties of undefined (reading 'fn')
Deno.bench();
     ^
    at [WILDCARD]
    at [WILDCARD]/bench/no_check.ts:1:6
